--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-1. Проапдейтить `tdutils` насколько это возможно и убрать сабмодуль, если необходимо.
+1. src/memprof - описать и нормально сделать.
+2. Проапдейтить `tdutils` насколько это возможно и убрать сабмодуль, если необходимо.
 
